# Builder

./: Applicationwindow.cpp  Applicationwindow.h  Applicationwindow.ui  Builder-widget.pro  Builder.pro  BuilderModule.cpp  BuilderModule.h  CMakeLists.txt  GccInterpreter.cpp  GccInterpreter.h  TODOs.txt  global.pri  main.cpp  resources.qrc
Application/: CMakeLists.txt
Application/Resources/Sources/: 0-unused-variable.c  1-hello.c  2-bad-format.c
Application/Resources/Sources-inclusion/: command.txt  func.c  individual-compilation.txt  main.c
Application/Resources/Sources-noDefinition/: class.h
Application/Resources/Sources-noIfndef/: class.h  main.cpp  source.cpp
ApplicationWindow/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  WindowContainer.cpp  WindowContainer.h
ApplicationWindow/Resources/: resources.qrc  sample.prj
ApplicationWindow/Resources/1-Sources-noDefinition/: class.h  instructions.txt  main.cpp
ApplicationWindow/Resources/2-Multiple files/: Command.txt  main.cpp  multipleFiles  print.cpp  print.h
ApplicationWindow/Resources/3-prjProject/: PrjTest.prj  main.cpp
ApplicationWindow/Resources/4-proProject/: QtTest.pro  Test.h  main.cpp
BuildManager/: BuildConfiguration.cpp  BuildConfiguration.h  BuildManager.cpp  BuildManager.h  BuildSteps.h  BuildSystem.cpp  BuildSystem.h  CMakeLists.txt  CmakeTarget.h  Environment.h  PrjmakeTarget.h  Process.cpp  Process.h  QmakeTarget.h  RunConfiguration.h  Target.cpp  Target.h
BuildModule/: BuildModule.cpp  BuildModule.h  CMakeLists.txt  GccInterpreter.cpp  GccInterpreter.h
BuildResources/: resources.qrc
BuildResources/CompileFolder/: PrintMessage.cpp  PrintMessage.h  main.cpp
BuildResources/MakeFolder/: main.cpp
BuildResources/RecompileFolder/: main.cpp
EditorModule/: CMakeLists.txt  EditorModule.cpp  EditorModule.h  EditorView.cpp  EditorView.h  ProjectsView.cpp  ProjectsView.h  SessionModule.cpp  SessionModule.h  TextEditor.h
Main/: Main.pro  main.cpp
MainWindow/: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  WindowContainer.cpp  WindowContainer.h
Plugins/: Plugins.pro
Plugins/ApplicationWindow/: ApplicationWindow.cpp  ApplicationWindow.h  ApplicationWindow.pro  ClickableLabel.h  WindowContainer.cpp  WindowContainer.h
Plugins/ApplicationWindow/Resources/: resources.qrc
Plugins/BuildManager/: BuildManager.cpp  BuildManager.h  BuildManager.pro  Target.cpp  Target.h
Plugins/CompileTool/: BuildStep.cpp  BuildStep.h  CompileTool.pro  GccCommandGenerator.cpp  GccCommandGenerator.h  GccHandler.cpp  GccHandler.h
Plugins/Components/: CommonTypes.h  Components.pro  DirectoryHelpers.cpp  DirectoryHelpers.h  EventListener.cpp  EventListener.h
Plugins/PrjTool/: Constants.h  PrjParser.cpp  PrjParser.h  PrjPerformer.cpp  PrjPerformer.h  PrjReader.cpp  PrjReader.h  PrjTool.pro
Plugins/ProjectManager/: Instance.cpp  Instance.h  ProjectInfo.h  ProjectManager.cpp  ProjectManager.h  ProjectManager.pro
Plugins/SessionModule/: CompileView.cpp  CompileView.h  EditView.cpp  EditView.h  SessionModule.cpp  SessionModule.h  SessionModule.pro
PrjResources/: resources.qrc
PrjResources/BinaryPrj/: SecondClass.h  main.cpp  main.prj
PrjResources/LibraryPrj/: firstLib.prj
PrjResources/SubdirsPrj/: subdirs.prj
PrjResources/SubdirsPrj/firstLib/: FirstClass.h  firstLib.prj
PrjResources/SubdirsPrj/secondLib/: SecondClass.h  secondLib.prj
PrjResources/TopLevelPrj/: topLevel.prj
ProjectManager/: CMakeLists.txt  DirectoryNode.cpp  DirectoryNode.h  Document.h  Project.cpp  Project.h  ProjectController.cpp  ProjectController.h  ProjectImporter.cpp  ProjectImporter.h  ProjectManager.cpp  ProjectManager.h  ProjectNode.cpp  ProjectNode.h  ProjectSettings.h
Resources/: 1-hello.c  2-bad-format.c
Resources-inclusion/: inclusion.7z  individual-compilation.txt
Resources/Sources-inclusion/: command.txt  main.c
Tests/: Tests.pro
Tests/BuildManagerTests/: BuildManagerTests.cpp  BuildManagerTests.h  BuildManagerTests.pro
Tests/ProjectManagerTests/: ProjectManagerTests.cpp  ProjectManagerTests.h  ProjectManagerTests.pro
Tests/common/: BuildMenu.cpp  BuildMenu.h  PrjMenu.cpp  PrjMenu.h  common.pri
